--- a/package.json
+++ b/package.json
@@ -10,11 +10,6 @@
   "keywords": [
     "react-native"
   ],
-  "author": "",
-  "license": "",
-  "peerDependencies": {
-    "react-native": "^0.41.2",
-    "react-native-windows": "0.41.0-rc.1"
-
-  }
+  "author": "Oliver Sheng",
+  "license": "ISC",
 }
