--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "url": "git+https://github.com/tilr-corp/Android-Settings-Opener.git"
   },
   "keywords": [
     "react-native"
